// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the component with false display 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "top": "35%",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#22529e",
            "borderRadius": 50,
            "height": 70,
            "justifyContent": "center",
            "width": 70,
          }
        }
        testID="TouchableOpacity2"
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              }
            }
            theme={
              Object {
                "colors": Object {
                  "disabled": "hsl(208, 8%, 90%)",
                  "divider": "#bcbbc1",
                  "error": "#ff190c",
                  "grey0": "#393e42",
                  "grey1": "#43484d",
                  "grey2": "#5e6977",
                  "grey3": "#86939e",
                  "grey4": "#bdc6cf",
                  "grey5": "#e1e8ee",
                  "greyOutline": "#bbb",
                  "platform": Object {
                    "android": Object {
                      "error": "#f44336",
                      "primary": "#2196f3",
                      "secondary": "#9C27B0",
                      "success": "#4caf50",
                      "warning": "#ffeb3b",
                    },
                    "ios": Object {
                      "error": "#ff3b30",
                      "primary": "#007aff",
                      "secondary": "#5856d6",
                      "success": "#4cd964",
                      "warning": "#ffcc00",
                    },
                  },
                  "primary": "#2089dc",
                  "searchBg": "#303337",
                  "secondary": "#8F0CE8",
                  "success": "#52c41a",
                  "warning": "#faad14",
                },
              }
            }
            underlayColor="white"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 25,
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="iconIcon"
            >
              
            </Text>
          </View>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`Render the component with true display 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "top": "30%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "marginBottom": "1%",
            "width": "100%",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#22529e",
              "borderRadius": 50,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            }
          }
          testID="TouchableOpacity1"
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
              underlayColor="white"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontSize": 15,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "height": "60%",
          }
        }
        testID="component"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-1"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    1
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-2"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    ABC
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-3"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    3
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    DEF
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-4"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    4
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    GHI
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-5"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    5
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    JKL
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-6"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    6
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    MNO
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-7"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    7
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    PQRS
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-8"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    8
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    TUV
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-9"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    9
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    VWXYZ
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-*"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    *
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-0"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    0
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    +
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.7}
                testID="dial-button-#"
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 25,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    #
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 10,
                          "textAlign": "center",
                        },
                        null,
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
